# html2pdf

./: README.md  compile_flags.txt  project.json  pyproject.toml
html2pdf/: __init__.py  __main__.py  browser.py  cli.py  consts.py  monkeys.py  papers.py  pdfgen.py  utils.py
meta/targets/: host-x86_64.json
src/html2pdf/: entry.cpp  manifest.json  printer.h  webview.h
src/webkit2gtk/: manifest.json
