[build-system]
requires = ["setuptools ~= 68.0"]

[project]
name = "o-html2pdf"
description = "Convert HTML to PDF using chromium headless"
authors = [{ name = "Odoo S.A", email = "info@odoo.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "python-cdp @ git+https://github.com/HMaker/python-cdp.git@1.4.0"
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "html2pdf.consts.VERSION" }

[project.scripts]
o-html2pdf = "html2pdf.cli:main"
